remove unnecessary shit

--- a/index-2.html
+++ b/index-2.html
@@ -44,25 +44,17 @@
                             <!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
                             <li><a href="#hero">Home</a></li>
                             <li class="dropdown megamenu vos">
-                                <a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
+                                <a class="dropdown-toggle">Data<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu fullwidth">
                                     <li class="megamenu-content withdesc">
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="elements.html#elements-accordion">Accordion</a></li>
-                                                <li><a href="elements.html#elements-buttons">Buttons</a></li>
-                                                <li><a href="elements.html#elements-features">Icon Features</a></li>
-                                                <li><a href="elements.html#elements-bars">Progress Bars</a></li>
-                                                <li><a href="elements.html#elements-pricing">Pricing Options</a></li>
-                                                <li><a href="elements.html#elements-lists">Lists</a></li>
-                                                <li><a href="elements.html#elements-typography">Typography</a></li>
+                                                <li><a href="stocks.html#elements-accordion">Accordion</a></li>
+                                                <li><a href="stocks.html#elements-buttons">Buttons</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="project-slides.html">Project Slides</a></li>
-                                                <li><a href="project-gallery.html">Projects Gallery</a></li>
-                                                <li><a href="project-video.html">Projects Video</a></li>
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
