--- a/index.html
+++ b/index.html
@@ -44,47 +44,17 @@
                             <!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
                             <li><a href="#hero">Home</a></li>
                             <li class="dropdown megamenu vos">
-                                <a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
+                                <a class="dropdown-toggle">Data<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu fullwidth">
                                     <li class="megamenu-content withdesc">
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="elements.html#elements-accordion">Accordion</a></li>
-                                                <li><a href="elements.html#elements-buttons">Buttons</a></li>
-                                                <li><a href="elements.html#elements-features">Icon Features</a></li>
-                                                <li><a href="elements.html#elements-bars">Progress Bars</a></li>
-                                                <li><a href="elements.html#elements-pricing">Pricing Options</a></li>
-                                                <li><a href="elements.html#elements-lists">Lists</a></li>
-                                                <li><a href="elements.html#elements-typography">Typography</a></li>
+                                                <li><a href="stocks.html#elements-accordion">Accordion</a></li>
+                                                <li><a href="stocks.html#elements-buttons">Buttons</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="elements.html#elements-tabs">Tabs</a></li>
-                                                <li><a href="elements.html#elements-circles">Progress Circles</a></li>
-                                                <li><a href="elements.html#elements-icons">Icon Fonts</a></li>
-                                                <li><a href="elements.html#elements-maps">Maps</a></li>
-                                                <li><a href="elements.html#elements-grid">Grid Columns</a></li>
-                                                <li><a href="elements.html#elements-countdown">Countdowns</a></li>
-                                                <li><a href="elements.html#elements-testimonials">Testimonials</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-md-3 mg-col">
-                                            <ul>
-                                                <li><a href="elements.html#elements-subscribe">Subscription</a></li>
-                                                <li><a href="elements.html#elements-videos">Video Embeds</a></li>
-                                                <li><a href="elements.html#elements-twitter">Twitter Feed</a></li>
-                                                <li><a href="elements.html#elements-callouts">Callouts</a></li>
-                                                <li><a href="portfolio-contained.html">Portfolio</a></li>
-                                                <li><a href="portfolio-fullwidth.html">Portfolio Fullwidth</a></li>
-                                                <li><a href="project-wide-gallery.html">Project Wide Gallery</a></li>
-                                            </ul>
-                                        </div>
-                                        <div class="col-md-3 mg-col">
-                                            <ul>
-                                                <li><a href="project-slides.html">Project Slides</a></li>
-                                                <li><a href="project-gallery.html">Projects Gallery</a></li>
-                                                <li><a href="project-video.html">Projects Video</a></li>
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
@@ -143,14 +113,14 @@
 
                         <div>
                             <h1>Sage of Sparta<br><strong>Take action</strong></h1>
-                            <p class="lead">If you do what is easy, life will be difficult</p>
+                            <p class="lead">If you do what is easy now, life will be difficult later</p>
                             <a href="#about" class="btn btn-lg btn-primary btn-scroll">Made with <i class="ion-heart"></i></a>
                         </div>
 
                         <div>
-                            <h1>Sage of Sparta<br><strong>Nice to Meet You</strong></h1>
-                            <p class="lead">Let's meet up and see if there's chemistry!</p>
-                            <a href="#team" class="btn btn-lg btn-primary btn-scroll">Meet the Team</a>
+                            <h1>Sage of Sparta<br><strong>Put the work in</strong></h1>
+                            <p class="lead">If you do what is difficult now, life will be easier later</p>
+                            <a href="#about" class="btn btn-lg btn-primary btn-scroll">Made with <i class="ion-heart"></i></a>
                         </div>
 
                     </div>
