update gdp data

--- a/stocks.html
+++ b/stocks.html
@@ -20,8 +20,7 @@
 		<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.25/js/jquery.dataTables.js"></script>
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
-        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/us_companies.js"></script>		
+        <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>	
         <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.1/papaparse.min.js"></script>
 		<script>
 		  
@@ -90,46 +89,23 @@
 
 							<!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
 							<li><a href="index-2.html">Home</a></li>
-							<li><a href="index-2.html#about">About</a></li>
-							<li><a href="index-2.html#services">Services</a></li>
-							<li><a href="index-2.html#works">Work</a></li>
 							<li class="dropdown megamenu vos">
 								<a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
 								<ul class="dropdown-menu fullwidth">
 									<li class="megamenu-content withdesc">
 										<div class="col-md-3 mg-col">
 											<ul>
-												<li><a href="#elements-accordion">Accordion</a></li>
-												<li><a href="#elements-buttons">Buttons</a></li>
-												<li><a href="#elements-features">Icon Features</a></li>
-												<li><a href="#elements-bars">Progress Bars</a></li>
-												<li><a href="#elements-pricing">Pricing Options</a></li>
-												<li><a href="#elements-lists">Lists</a></li>
-												<li><a href="#elements-typography">Typography</a></li>
+												<li><a href="#elements-accordion">Equities</a></li>
+												<li><a href="#elements-buttons">GDP</a></li>
 											</ul>
 										</div>
 										<div class="col-md-3 mg-col">
 											<ul>
-												<li><a href="project-slides.html">Project Slides</a></li>
-												<li><a href="project-gallery.html">Projects Gallery</a></li>
-												<li><a href="project-video.html">Projects Video</a></li>
 												<li><a href="ism.html">ISM Manufacturing</a></li>
 												<li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
 											</ul>
 										</div>
 									</li>
-								</ul>
-							</li>
-							<li class="dropdown">
-								<a class="dropdown-toggle">Blog<i class="ion-ios-arrow-down"></i></a>
-								<ul class="dropdown-menu">
-									<li><a href="blog-standard.html">Standard Layout</a></li>
-									<li><a href="blog-list.html">List Layout</a></li>
-									<li><a href="blog-grid.html">Grid Layout</a></li>
-									<li><a href="blog-post-standard.html">Standard Post</a></li>
-									<li><a href="blog-post-gallery.html">Gallery Post</a></li>
-									<li><a href="blog-post-video.html">Video Post</a></li>
-									<li><a href="blog-post-fullwidth.html">Fullwidth Post</a></li>
 								</ul>
 							</li>
 							<li><a href="index-2.html#contact">Contact</a></li>
@@ -147,19 +123,15 @@
 		<!-- End Header -->
 
 
-		<!-- Accordion -->
-		<section id="elements-accordion" class="pt120 pb120">
+
+		<!-- Button Tabs Centered -->
+		<section id="elements-buttons" class="pt100 pb80" style="width:100%" align-content= "center">
+			<div class="container">
+				<div class="row">
 					<div class="col-md-12 text-center mt40 pb40">
 						<h1><strong>USA Stocks</strong></h1>
 					</div>
 
-		</section>
-		<!-- End Accordion -->
-
-		<!-- Button Tabs Centered -->
-		<section id="elements-buttons" class="pt100 pb80" style="width:100%" align-content= "left">
-			<div class="container">
-				<div class="row">
 
 					<div class="col-md-10 mr-auto text-center">
 
@@ -189,8 +161,6 @@
 								</div>
 
 								<div class="tab-pane" id="tab-c3">
-									<p>Kickstarter truffaut cold-pressed chillwave, brooklyn gochujang chartreuse authentic. Lumbersexual heirloom offal twee, semiotics mixtape gastropub master cleanse normcore tousled meh literally. Pug chartreuse next level synth, biodiesel tilde blue bottle ethical yuccie. Microdosing with and fapchillwave gochujang brooklyn intelligentsia, kombucha dreamcatcher vinyl leggings shoreditch pork belly. 
-									</p>
 
 									<table id="table_id" class="display" width="70%"></table>
 
