--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                                     <li class="megamenu-content withdesc">
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="stocks.html#elements-accordion">Accordion</a></li>
-                                                <li><a href="stocks.html#elements-buttons">Buttons</a></li>
+                                                <li><a href="stocks.html#elements-accordion">Equities</a></li>
+                                                <li><a href="gdp.html">GDP</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
