--- a/ism.html
+++ b/ism.html
@@ -40,46 +40,23 @@
 
                             <!-- Each section must have corresponding ID ( #hero -> id="hero" ) -->
                             <li><a href="index-2.html">Home</a></li>
-                            <li><a href="index-2.html#about">About</a></li>
-                            <li><a href="index-2.html#services">Services</a></li>
-                            <li><a href="index-2.html#works">Work</a></li>
                             <li class="dropdown megamenu vos">
                                 <a class="dropdown-toggle">Elements<i class="ion-ios-arrow-down"></i></a>
                                 <ul class="dropdown-menu fullwidth">
                                     <li class="megamenu-content withdesc">
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="elements.html#elements-accordion">Accordion</a></li>
-                                                <li><a href="elements.html#elements-buttons">Buttons</a></li>
-                                                <li><a href="elements.html#elements-features">Icon Features</a></li>
-                                                <li><a href="elements.html#elements-bars">Progress Bars</a></li>
-                                                <li><a href="elements.html#elements-pricing">Pricing Options</a></li>
-                                                <li><a href="elements.html#elements-lists">Lists</a></li>
-                                                <li><a href="elements.html#elements-typography">Typography</a></li>
+                                                <li><a href="stocks.html#elements-accordion">Equities</a></li>
+                                                <li><a href="gdp.html">GDP</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="project-slides.html">Project Slides</a></li>
-                                                <li><a href="project-gallery.html">Projects Gallery</a></li>
-                                                <li><a href="project-video.html">Projects Video</a></li>
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
                                         </div>
                                     </li>
-                                </ul>
-                            </li>
-                            <li class="dropdown">
-                                <a class="dropdown-toggle">Blog<i class="ion-ios-arrow-down"></i></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="blog-standard.html">Standard Layout</a></li>
-                                    <li><a href="blog-list.html">List Layout</a></li>
-                                    <li><a href="blog-grid.html">Grid Layout</a></li>
-                                    <li><a href="blog-post-standard.html">Standard Post</a></li>
-                                    <li><a href="blog-post-gallery.html">Gallery Post</a></li>
-                                    <li><a href="blog-post-video.html">Video Post</a></li>
-                                    <li><a href="blog-post-fullwidth.html">Fullwidth Post</a></li>
                                 </ul>
                             </li>
                             <li><a href="index-2.html#contact">Contact</a></li>
