--- a/stocks.html
+++ b/stocks.html
@@ -95,8 +95,9 @@
 									<li class="megamenu-content withdesc">
 										<div class="col-md-3 mg-col">
 											<ul>
-												<li><a href="#elements-accordion">Equities</a></li>
-												<li><a href="#elements-buttons">GDP</a></li>
+												<li><a href="stocks.html">Equities</a></li>
+												<li><a href="gdp.html">GDP</a></li>
+												<li><a href="umcsi.html">UMCSI</a></li>
 											</ul>
 										</div>
 										<div class="col-md-3 mg-col">
