add umcsi chart

--- a/index-2.html
+++ b/index-2.html
@@ -57,6 +57,7 @@
                                         <div class="col-md-3 mg-col">
                                             <ul>
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
+                                                <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
                                         </div>
