--- a/ism-services.html
+++ b/ism-services.html
@@ -47,8 +47,7 @@
                                         <div class="col-md-3 mg-col">
                                             <ul>
                                                 <li><a href="stocks.html#elements-accordion">Equities</a></li>
-                                                <li><a href="stocks.html#elements-buttons">GDP</a></li>
-                                                <li><a href="umcsi.html">UMCSI</a></li>
+                                                <li><a href="gdp.html">GDP</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
@@ -81,15 +80,15 @@
                 <div class="row text-center">
 
                     <div class="col-md-12 text-center">
-                        <h1><strong>GDP</strong></h1>
-                        <p class="lead">Check out GDP of countries across the world.</p>
+                        <h1><strong>ISM Services</strong></h1>
+                        <p class="lead">The ISM services bla bla bla.</p>
                     </div>
 
                 </div>
             </div>
 
                            <!-- DAMIAN J -->
-            <div id="chartDivGDP" style="width:80%; height:500px; margin:0 auto;"></div>  
+            <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>  
 
 
         </section>
@@ -123,7 +122,7 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/gdp.js"></script>
+        <script src="js/nmi.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
