--- a/housing.html
+++ b/housing.html
@@ -46,16 +46,16 @@
                                     <li class="megamenu-content withdesc">
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="stocks.html#elements-accordion">Equities</a></li>
+                                                <li><a href="stocks.html">Equities</a></li>
                                                 <li><a href="gdp.html">GDP</a></li>
+                                                <li><a href="umcsi.html">UMCSI</a></li>
+                                                <li><a href="housing.html">Housing</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
                                             <ul>
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
-                                                <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
-                                                <li><a href="housing.html">Housing</a></li>
                                             </ul>
                                         </div>
                                     </li>
@@ -81,16 +81,15 @@
                 <div class="row text-center">
 
                     <div class="col-md-12 text-center">
-                        <h1><strong>ISM Services</strong></h1>
-                        <p class="lead">The ISM services bla bla bla.</p>
+                        <h1><strong>Building Permits - Housing Starts - Completions</strong></h1>
+                        <p class="lead">building stuffs</p>
                     </div>
 
                 </div>
             </div>
 
                            <!-- DAMIAN J -->
-            <div id="chartDiv4" style="width:80%; height:500px; margin:0 auto;"></div>  
-
+            <div id="chartDivHOUSING" style="width:80%; height:500px; margin:0 auto;"></div>  
 
         </section>
         <!-- End Project -->
@@ -123,7 +122,7 @@
         <script src="https://code.jscharting.com/latest/jscharting.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/types.js"></script>
         <script type="text/javascript" src="https://code.jscharting.com/latest/modules/toolbar.js"></script>
-        <script src="js/nmi.js"></script>
+        <script src="js/housing.js"></script>
         <script src="js/jquery.js"></script>
         <script src="js/init.js"></script>
         <script src="js/scripts.js"></script>
