--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                                                 <li><a href="stocks.html#elements-accordion">Equities</a></li>
                                                 <li><a href="gdp.html">GDP</a></li>
                                                 <li><a href="umcsi.html">UMCSI</a></li>
+                                                <li><a href="housing.html">Housing</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
