--- a/ism.html
+++ b/ism.html
@@ -48,11 +48,14 @@
                                             <ul>
                                                 <li><a href="stocks.html#elements-accordion">Equities</a></li>
                                                 <li><a href="gdp.html">GDP</a></li>
+                                                <li><a href="umcsi.html">UMCSI</a></li>
+                                                <li><a href="housing.html">Housing</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
                                             <ul>
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
+                                                <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
                                             </ul>
                                         </div>
