create page for screening stocks from USA, India and China

--- a/screener.html
+++ b/screener.html
@@ -56,9 +56,10 @@
 										<div class="col-md-3 mg-col">
 											<ul>
 												<li><a href="stocks.html">Equities</a></li>
-												<li><a href="gdp.html">GDP</a></li>
-												<li><a href="umcsi.html">UMCSI</a></li>
-												<li><a href="housing.html">Housing</a></li>
+                                                <li><a href="gdp.html">GDP</a></li>
+                                                <li><a href="umcsi.html">UMCSI</a></li>
+                                                <li><a href="housing.html">Housing</a></li>
+                                                <li><a href="screener.html">Stock Screener</a></li>
 											</ul>
 										</div>
 										<div class="col-md-3 mg-col">
@@ -92,7 +93,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center mt40 pb40">
-						<h1><strong>USA Stocks</strong></h1>
+						<h1><strong>Stock Screener</strong></h1>
 					</div>
 
 
