--- a/umcsi.html
+++ b/umcsi.html
@@ -50,6 +50,7 @@
                                                 <li><a href="gdp.html">GDP</a></li>
                                                 <li><a href="umcsi.html">UMCSI</a></li>
                                                 <li><a href="housing.html">Housing</a></li>
+                                                <li><a href="screener.html">Stock Screener</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
