--- a/ism-services.html
+++ b/ism-services.html
@@ -46,8 +46,11 @@
                                     <li class="megamenu-content withdesc">
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="stocks.html#elements-accordion">Equities</a></li>
+                                                <li><a href="stocks.html">Equities</a></li>
                                                 <li><a href="gdp.html">GDP</a></li>
+                                                <li><a href="umcsi.html">UMCSI</a></li>
+                                                <li><a href="housing.html">Housing</a></li>
+                                                <li><a href="screener.html">Stock Screener</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
@@ -55,7 +58,7 @@
                                                 <li><a href="ism.html">ISM Manufacturing</a></li>
                                                 <li><a href="ism-services.html">ISM Services</a></li>
                                                 <li><a href="ism-heatmaps.html">ISM Heatmaps</a></li>
-                                                <li><a href="housing.html">Housing</a></li>
+                                                
                                             </ul>
                                         </div>
                                     </li>
