--- a/ism.html
+++ b/ism.html
@@ -46,10 +46,12 @@
                                     <li class="megamenu-content withdesc">
                                         <div class="col-md-3 mg-col">
                                             <ul>
-                                                <li><a href="stocks.html#elements-accordion">Equities</a></li>
+                                                <li><a href="stocks.html">Equities</a></li>
                                                 <li><a href="gdp.html">GDP</a></li>
                                                 <li><a href="umcsi.html">UMCSI</a></li>
                                                 <li><a href="housing.html">Housing</a></li>
+                                                <li><a href="screener.html">Stock Screener</a></li>
+                                                
                                             </ul>
                                         </div>
                                         <div class="col-md-3 mg-col">
