--- a/stocks.html
+++ b/stocks.html
@@ -54,7 +54,7 @@
 			}
 
 		var column_list = [
-					          { title: "Company Name" }, 
+					          { title: "Company Name", "data": "Company Name" }, 
 					          { title: "Ticker"}, 
 					          { title: "Exchange" }, 
 					          { title: "Sector" }, 
@@ -179,16 +179,21 @@
 									//$('#table').dataTable().clear().draw();
 									     Papa.parse("https://raw.githubusercontent.com/Sage-of-Sparta/Sage-of-Sparta.github.io/master/data/usa_stocks/us_sector_equities.csv", {
 										          download: true,
-										          header: false,
+										          //header: false,
+										          header:true,
+										          dynamicTyping: true,
 										          skipEmptyLines: true,
 										          complete: function(example) {
+										          	console.log(example.data);
 										          $(document).ready(function () {
 										              var dataTables = $('#table').DataTable({
 										              	retrieve: true,
 										              	paging: false,
-										                  data: example.data,
-										                  columns: column_list,
+										                  //data: example.data,
+										                data:column_list
+										                  //columns: column_list,
 										              });
+										              
 										              dataTables.columns(3).search("Computer and Technology").draw();
 												  });
 										          }
@@ -210,11 +215,7 @@
 										              	retrieve: true,
 										              	  paging: false,
 										                  data: example.data,
-										                  columns: column_list,
-										                  "data":"EPS Growth F1",
-								                          "render": function ( data ) {
-														    return data.toFixed(2)},
-					      
+										                  columns: column_list,					      
 										              });
 										              dataTables.columns(3).search("Finance").draw();
 												  });
